parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    KOMENTARZ

Grammar

Rule 0     S' -> plik
Rule 1     plik -> procedury main
Rule 2     procedury -> <empty>
Rule 3     procedury -> procedury PROCEDURA naglowekProcedury IS BEGIN komendy END
Rule 4     procedury -> procedury PROCEDURA naglowekProcedury IS deklaracje BEGIN komendy END
Rule 5     main -> MAIN IS BEGIN komendy END
Rule 6     main -> MAIN IS deklaracje BEGIN komendy END
Rule 7     komendy -> komenda
Rule 8     komendy -> komendy komenda
Rule 9     komenda -> identyfikator PRZYPISANIE wyrazenie SREDNIK
Rule 10    komenda -> IF warunek THEN komendy ENDIF
Rule 11    komenda -> IF warunek THEN komendy ELSE komendy ENDIF
Rule 12    komenda -> FOR IDENTYFIKATOR FROM wartosc DOWNTO wartosc DO komendy ENDFOR
Rule 13    komenda -> FOR IDENTYFIKATOR FROM wartosc TO wartosc DO komendy ENDFOR
Rule 14    komenda -> WHILE warunek DO komendy ENDWHILE
Rule 15    komenda -> REPEAT komendy UNTIL warunek SREDNIK
Rule 16    komenda -> wywolanieProcedury SREDNIK
Rule 17    komenda -> READ identyfikator SREDNIK
Rule 18    komenda -> WRITE wartosc SREDNIK
Rule 19    naglowekProcedury -> IDENTYFIKATOR LEWYNAWIAS deklaracjeParametrow PRAWYNAWIAS
Rule 20    wywolanieProcedury -> IDENTYFIKATOR LEWYNAWIAS argumenty PRAWYNAWIAS
Rule 21    deklaracje -> IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
Rule 22    deklaracje -> IDENTYFIKATOR
Rule 23    deklaracje -> deklaracje PRZECINEK IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
Rule 24    deklaracje -> deklaracje PRZECINEK IDENTYFIKATOR
Rule 25    deklaracjeParametrow -> TABLICA IDENTYFIKATOR
Rule 26    deklaracjeParametrow -> IDENTYFIKATOR
Rule 27    deklaracjeParametrow -> deklaracjeParametrow PRZECINEK TABLICA IDENTYFIKATOR
Rule 28    deklaracjeParametrow -> deklaracjeParametrow PRZECINEK IDENTYFIKATOR
Rule 29    argumenty -> argumenty PRZECINEK IDENTYFIKATOR
Rule 30    argumenty -> IDENTYFIKATOR
Rule 31    wyrazenie -> wartosc
Rule 32    wyrazenie -> wartosc MINUS wartosc
Rule 33    wyrazenie -> wartosc PLUS wartosc
Rule 34    wyrazenie -> wartosc MODULO wartosc
Rule 35    wyrazenie -> wartosc DZIELENIE wartosc
Rule 36    wyrazenie -> wartosc MNOZENIE wartosc
Rule 37    warunek -> wartosc CZYMNIEJSZEROWNE wartosc
Rule 38    warunek -> wartosc CZYWIEKSZEROWNE wartosc
Rule 39    warunek -> wartosc CZYMNIEJSZE wartosc
Rule 40    warunek -> wartosc CZYWIEKSZE wartosc
Rule 41    warunek -> wartosc CZYROZNE wartosc
Rule 42    warunek -> wartosc CZYROWNE wartosc
Rule 43    wartosc -> liczba
Rule 44    wartosc -> identyfikator
Rule 45    liczba -> LICZBA
Rule 46    liczba -> MINUS LICZBA
Rule 47    identyfikator -> IDENTYFIKATOR
Rule 48    identyfikator -> identyfikatorTablicy
Rule 49    identyfikatorTablicy -> IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
Rule 50    identyfikatorTablicy -> IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

Terminals, with rules where they appear

BEGIN                : 3 4 5 6
CZYMNIEJSZE          : 39
CZYMNIEJSZEROWNE     : 37
CZYROWNE             : 42
CZYROZNE             : 41
CZYWIEKSZE           : 40
CZYWIEKSZEROWNE      : 38
DO                   : 12 13 14
DOWNTO               : 12
DWUKROPEK            : 21 23
DZIELENIE            : 35
ELSE                 : 11
END                  : 3 4 5 6
ENDFOR               : 12 13
ENDIF                : 10 11
ENDWHILE             : 14
FOR                  : 12 13
FROM                 : 12 13
IDENTYFIKATOR        : 12 13 19 20 21 22 23 24 25 26 27 28 29 30 47 49 49 50
IF                   : 10 11
IS                   : 3 4 5 6
KOMENTARZ            : 
LEWYNAWIAS           : 19 20
LEWYNAWIASKWADRATOWY : 21 23 49 50
LICZBA               : 45 46
MAIN                 : 5 6
MINUS                : 32 46
MNOZENIE             : 36
MODULO               : 34
PLUS                 : 33
PRAWYNAWIAS          : 19 20
PRAWYNAWIASKWADRATOWY : 21 23 49 50
PROCEDURA            : 3 4
PRZECINEK            : 23 24 27 28 29
PRZYPISANIE          : 9
READ                 : 17
REPEAT               : 15
SREDNIK              : 9 15 16 17 18
TABLICA              : 25 27
THEN                 : 10 11
TO                   : 13
UNTIL                : 15
WHILE                : 14
WRITE                : 18
error                : 

Nonterminals, with rules where they appear

argumenty            : 20 29
deklaracje           : 4 6 23 24
deklaracjeParametrow : 19 27 28
identyfikator        : 9 17 44
identyfikatorTablicy : 48
komenda              : 7 8
komendy              : 3 4 5 6 8 10 11 11 12 13 14 15
liczba               : 21 21 23 23 43 50
main                 : 1
naglowekProcedury    : 3 4
plik                 : 0
procedury            : 1 3 4
wartosc              : 12 12 13 13 18 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42
warunek              : 10 11 14 15
wyrazenie            : 9
wywolanieProcedury   : 16

Parsing method: LALR

state 0

    (0) S' -> . plik
    (1) plik -> . procedury main
    (2) procedury -> .
    (3) procedury -> . procedury PROCEDURA naglowekProcedury IS BEGIN komendy END
    (4) procedury -> . procedury PROCEDURA naglowekProcedury IS deklaracje BEGIN komendy END

    PROCEDURA       reduce using rule 2 (procedury -> .)
    MAIN            reduce using rule 2 (procedury -> .)

    plik                           shift and go to state 1
    procedury                      shift and go to state 2

state 1

    (0) S' -> plik .



state 2

    (1) plik -> procedury . main
    (3) procedury -> procedury . PROCEDURA naglowekProcedury IS BEGIN komendy END
    (4) procedury -> procedury . PROCEDURA naglowekProcedury IS deklaracje BEGIN komendy END
    (5) main -> . MAIN IS BEGIN komendy END
    (6) main -> . MAIN IS deklaracje BEGIN komendy END

    PROCEDURA       shift and go to state 4
    MAIN            shift and go to state 5

    main                           shift and go to state 3

state 3

    (1) plik -> procedury main .

    $end            reduce using rule 1 (plik -> procedury main .)


state 4

    (3) procedury -> procedury PROCEDURA . naglowekProcedury IS BEGIN komendy END
    (4) procedury -> procedury PROCEDURA . naglowekProcedury IS deklaracje BEGIN komendy END
    (19) naglowekProcedury -> . IDENTYFIKATOR LEWYNAWIAS deklaracjeParametrow PRAWYNAWIAS

    IDENTYFIKATOR   shift and go to state 7

    naglowekProcedury              shift and go to state 6

state 5

    (5) main -> MAIN . IS BEGIN komendy END
    (6) main -> MAIN . IS deklaracje BEGIN komendy END

    IS              shift and go to state 8


state 6

    (3) procedury -> procedury PROCEDURA naglowekProcedury . IS BEGIN komendy END
    (4) procedury -> procedury PROCEDURA naglowekProcedury . IS deklaracje BEGIN komendy END

    IS              shift and go to state 9


state 7

    (19) naglowekProcedury -> IDENTYFIKATOR . LEWYNAWIAS deklaracjeParametrow PRAWYNAWIAS

    LEWYNAWIAS      shift and go to state 10


state 8

    (5) main -> MAIN IS . BEGIN komendy END
    (6) main -> MAIN IS . deklaracje BEGIN komendy END
    (21) deklaracje -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
    (22) deklaracje -> . IDENTYFIKATOR
    (23) deklaracje -> . deklaracje PRZECINEK IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
    (24) deklaracje -> . deklaracje PRZECINEK IDENTYFIKATOR

    BEGIN           shift and go to state 11
    IDENTYFIKATOR   shift and go to state 13

    deklaracje                     shift and go to state 12

state 9

    (3) procedury -> procedury PROCEDURA naglowekProcedury IS . BEGIN komendy END
    (4) procedury -> procedury PROCEDURA naglowekProcedury IS . deklaracje BEGIN komendy END
    (21) deklaracje -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
    (22) deklaracje -> . IDENTYFIKATOR
    (23) deklaracje -> . deklaracje PRZECINEK IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
    (24) deklaracje -> . deklaracje PRZECINEK IDENTYFIKATOR

    BEGIN           shift and go to state 14
    IDENTYFIKATOR   shift and go to state 13

    deklaracje                     shift and go to state 15

state 10

    (19) naglowekProcedury -> IDENTYFIKATOR LEWYNAWIAS . deklaracjeParametrow PRAWYNAWIAS
    (25) deklaracjeParametrow -> . TABLICA IDENTYFIKATOR
    (26) deklaracjeParametrow -> . IDENTYFIKATOR
    (27) deklaracjeParametrow -> . deklaracjeParametrow PRZECINEK TABLICA IDENTYFIKATOR
    (28) deklaracjeParametrow -> . deklaracjeParametrow PRZECINEK IDENTYFIKATOR

    TABLICA         shift and go to state 18
    IDENTYFIKATOR   shift and go to state 16

    deklaracjeParametrow           shift and go to state 17

state 11

    (5) main -> MAIN IS BEGIN . komendy END
    (7) komendy -> . komenda
    (8) komendy -> . komendy komenda
    (9) komenda -> . identyfikator PRZYPISANIE wyrazenie SREDNIK
    (10) komenda -> . IF warunek THEN komendy ENDIF
    (11) komenda -> . IF warunek THEN komendy ELSE komendy ENDIF
    (12) komenda -> . FOR IDENTYFIKATOR FROM wartosc DOWNTO wartosc DO komendy ENDFOR
    (13) komenda -> . FOR IDENTYFIKATOR FROM wartosc TO wartosc DO komendy ENDFOR
    (14) komenda -> . WHILE warunek DO komendy ENDWHILE
    (15) komenda -> . REPEAT komendy UNTIL warunek SREDNIK
    (16) komenda -> . wywolanieProcedury SREDNIK
    (17) komenda -> . READ identyfikator SREDNIK
    (18) komenda -> . WRITE wartosc SREDNIK
    (47) identyfikator -> . IDENTYFIKATOR
    (48) identyfikator -> . identyfikatorTablicy
    (20) wywolanieProcedury -> . IDENTYFIKATOR LEWYNAWIAS argumenty PRAWYNAWIAS
    (49) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 25
    REPEAT          shift and go to state 26
    READ            shift and go to state 28
    WRITE           shift and go to state 29
    IDENTYFIKATOR   shift and go to state 24

    komendy                        shift and go to state 19
    komenda                        shift and go to state 20
    identyfikator                  shift and go to state 21
    wywolanieProcedury             shift and go to state 27
    identyfikatorTablicy           shift and go to state 30

state 12

    (6) main -> MAIN IS deklaracje . BEGIN komendy END
    (23) deklaracje -> deklaracje . PRZECINEK IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
    (24) deklaracje -> deklaracje . PRZECINEK IDENTYFIKATOR

    BEGIN           shift and go to state 31
    PRZECINEK       shift and go to state 32


state 13

    (21) deklaracje -> IDENTYFIKATOR . LEWYNAWIASKWADRATOWY liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
    (22) deklaracje -> IDENTYFIKATOR .

    LEWYNAWIASKWADRATOWY shift and go to state 33
    BEGIN           reduce using rule 22 (deklaracje -> IDENTYFIKATOR .)
    PRZECINEK       reduce using rule 22 (deklaracje -> IDENTYFIKATOR .)


state 14

    (3) procedury -> procedury PROCEDURA naglowekProcedury IS BEGIN . komendy END
    (7) komendy -> . komenda
    (8) komendy -> . komendy komenda
    (9) komenda -> . identyfikator PRZYPISANIE wyrazenie SREDNIK
    (10) komenda -> . IF warunek THEN komendy ENDIF
    (11) komenda -> . IF warunek THEN komendy ELSE komendy ENDIF
    (12) komenda -> . FOR IDENTYFIKATOR FROM wartosc DOWNTO wartosc DO komendy ENDFOR
    (13) komenda -> . FOR IDENTYFIKATOR FROM wartosc TO wartosc DO komendy ENDFOR
    (14) komenda -> . WHILE warunek DO komendy ENDWHILE
    (15) komenda -> . REPEAT komendy UNTIL warunek SREDNIK
    (16) komenda -> . wywolanieProcedury SREDNIK
    (17) komenda -> . READ identyfikator SREDNIK
    (18) komenda -> . WRITE wartosc SREDNIK
    (47) identyfikator -> . IDENTYFIKATOR
    (48) identyfikator -> . identyfikatorTablicy
    (20) wywolanieProcedury -> . IDENTYFIKATOR LEWYNAWIAS argumenty PRAWYNAWIAS
    (49) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 25
    REPEAT          shift and go to state 26
    READ            shift and go to state 28
    WRITE           shift and go to state 29
    IDENTYFIKATOR   shift and go to state 24

    komendy                        shift and go to state 34
    komenda                        shift and go to state 20
    identyfikator                  shift and go to state 21
    wywolanieProcedury             shift and go to state 27
    identyfikatorTablicy           shift and go to state 30

state 15

    (4) procedury -> procedury PROCEDURA naglowekProcedury IS deklaracje . BEGIN komendy END
    (23) deklaracje -> deklaracje . PRZECINEK IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
    (24) deklaracje -> deklaracje . PRZECINEK IDENTYFIKATOR

    BEGIN           shift and go to state 35
    PRZECINEK       shift and go to state 32


state 16

    (26) deklaracjeParametrow -> IDENTYFIKATOR .

    PRAWYNAWIAS     reduce using rule 26 (deklaracjeParametrow -> IDENTYFIKATOR .)
    PRZECINEK       reduce using rule 26 (deklaracjeParametrow -> IDENTYFIKATOR .)


state 17

    (19) naglowekProcedury -> IDENTYFIKATOR LEWYNAWIAS deklaracjeParametrow . PRAWYNAWIAS
    (27) deklaracjeParametrow -> deklaracjeParametrow . PRZECINEK TABLICA IDENTYFIKATOR
    (28) deklaracjeParametrow -> deklaracjeParametrow . PRZECINEK IDENTYFIKATOR

    PRAWYNAWIAS     shift and go to state 36
    PRZECINEK       shift and go to state 37


state 18

    (25) deklaracjeParametrow -> TABLICA . IDENTYFIKATOR

    IDENTYFIKATOR   shift and go to state 38


state 19

    (5) main -> MAIN IS BEGIN komendy . END
    (8) komendy -> komendy . komenda
    (9) komenda -> . identyfikator PRZYPISANIE wyrazenie SREDNIK
    (10) komenda -> . IF warunek THEN komendy ENDIF
    (11) komenda -> . IF warunek THEN komendy ELSE komendy ENDIF
    (12) komenda -> . FOR IDENTYFIKATOR FROM wartosc DOWNTO wartosc DO komendy ENDFOR
    (13) komenda -> . FOR IDENTYFIKATOR FROM wartosc TO wartosc DO komendy ENDFOR
    (14) komenda -> . WHILE warunek DO komendy ENDWHILE
    (15) komenda -> . REPEAT komendy UNTIL warunek SREDNIK
    (16) komenda -> . wywolanieProcedury SREDNIK
    (17) komenda -> . READ identyfikator SREDNIK
    (18) komenda -> . WRITE wartosc SREDNIK
    (47) identyfikator -> . IDENTYFIKATOR
    (48) identyfikator -> . identyfikatorTablicy
    (20) wywolanieProcedury -> . IDENTYFIKATOR LEWYNAWIAS argumenty PRAWYNAWIAS
    (49) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    END             shift and go to state 39
    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 25
    REPEAT          shift and go to state 26
    READ            shift and go to state 28
    WRITE           shift and go to state 29
    IDENTYFIKATOR   shift and go to state 24

    komenda                        shift and go to state 40
    identyfikator                  shift and go to state 21
    wywolanieProcedury             shift and go to state 27
    identyfikatorTablicy           shift and go to state 30

state 20

    (7) komendy -> komenda .

    END             reduce using rule 7 (komendy -> komenda .)
    IF              reduce using rule 7 (komendy -> komenda .)
    FOR             reduce using rule 7 (komendy -> komenda .)
    WHILE           reduce using rule 7 (komendy -> komenda .)
    REPEAT          reduce using rule 7 (komendy -> komenda .)
    READ            reduce using rule 7 (komendy -> komenda .)
    WRITE           reduce using rule 7 (komendy -> komenda .)
    IDENTYFIKATOR   reduce using rule 7 (komendy -> komenda .)
    UNTIL           reduce using rule 7 (komendy -> komenda .)
    ENDIF           reduce using rule 7 (komendy -> komenda .)
    ELSE            reduce using rule 7 (komendy -> komenda .)
    ENDWHILE        reduce using rule 7 (komendy -> komenda .)
    ENDFOR          reduce using rule 7 (komendy -> komenda .)


state 21

    (9) komenda -> identyfikator . PRZYPISANIE wyrazenie SREDNIK

    PRZYPISANIE     shift and go to state 41


state 22

    (10) komenda -> IF . warunek THEN komendy ENDIF
    (11) komenda -> IF . warunek THEN komendy ELSE komendy ENDIF
    (37) warunek -> . wartosc CZYMNIEJSZEROWNE wartosc
    (38) warunek -> . wartosc CZYWIEKSZEROWNE wartosc
    (39) warunek -> . wartosc CZYMNIEJSZE wartosc
    (40) warunek -> . wartosc CZYWIEKSZE wartosc
    (41) warunek -> . wartosc CZYROZNE wartosc
    (42) warunek -> . wartosc CZYROWNE wartosc
    (43) wartosc -> . liczba
    (44) wartosc -> . identyfikator
    (45) liczba -> . LICZBA
    (46) liczba -> . MINUS LICZBA
    (47) identyfikator -> . IDENTYFIKATOR
    (48) identyfikator -> . identyfikatorTablicy
    (49) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    LICZBA          shift and go to state 46
    MINUS           shift and go to state 47
    IDENTYFIKATOR   shift and go to state 48

    warunek                        shift and go to state 42
    wartosc                        shift and go to state 43
    liczba                         shift and go to state 44
    identyfikator                  shift and go to state 45
    identyfikatorTablicy           shift and go to state 30

state 23

    (12) komenda -> FOR . IDENTYFIKATOR FROM wartosc DOWNTO wartosc DO komendy ENDFOR
    (13) komenda -> FOR . IDENTYFIKATOR FROM wartosc TO wartosc DO komendy ENDFOR

    IDENTYFIKATOR   shift and go to state 49


state 24

    (47) identyfikator -> IDENTYFIKATOR .
    (20) wywolanieProcedury -> IDENTYFIKATOR . LEWYNAWIAS argumenty PRAWYNAWIAS
    (49) identyfikatorTablicy -> IDENTYFIKATOR . LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> IDENTYFIKATOR . LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    PRZYPISANIE     reduce using rule 47 (identyfikator -> IDENTYFIKATOR .)
    LEWYNAWIAS      shift and go to state 50
    LEWYNAWIASKWADRATOWY shift and go to state 51


state 25

    (14) komenda -> WHILE . warunek DO komendy ENDWHILE
    (37) warunek -> . wartosc CZYMNIEJSZEROWNE wartosc
    (38) warunek -> . wartosc CZYWIEKSZEROWNE wartosc
    (39) warunek -> . wartosc CZYMNIEJSZE wartosc
    (40) warunek -> . wartosc CZYWIEKSZE wartosc
    (41) warunek -> . wartosc CZYROZNE wartosc
    (42) warunek -> . wartosc CZYROWNE wartosc
    (43) wartosc -> . liczba
    (44) wartosc -> . identyfikator
    (45) liczba -> . LICZBA
    (46) liczba -> . MINUS LICZBA
    (47) identyfikator -> . IDENTYFIKATOR
    (48) identyfikator -> . identyfikatorTablicy
    (49) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    LICZBA          shift and go to state 46
    MINUS           shift and go to state 47
    IDENTYFIKATOR   shift and go to state 48

    warunek                        shift and go to state 52
    wartosc                        shift and go to state 43
    liczba                         shift and go to state 44
    identyfikator                  shift and go to state 45
    identyfikatorTablicy           shift and go to state 30

state 26

    (15) komenda -> REPEAT . komendy UNTIL warunek SREDNIK
    (7) komendy -> . komenda
    (8) komendy -> . komendy komenda
    (9) komenda -> . identyfikator PRZYPISANIE wyrazenie SREDNIK
    (10) komenda -> . IF warunek THEN komendy ENDIF
    (11) komenda -> . IF warunek THEN komendy ELSE komendy ENDIF
    (12) komenda -> . FOR IDENTYFIKATOR FROM wartosc DOWNTO wartosc DO komendy ENDFOR
    (13) komenda -> . FOR IDENTYFIKATOR FROM wartosc TO wartosc DO komendy ENDFOR
    (14) komenda -> . WHILE warunek DO komendy ENDWHILE
    (15) komenda -> . REPEAT komendy UNTIL warunek SREDNIK
    (16) komenda -> . wywolanieProcedury SREDNIK
    (17) komenda -> . READ identyfikator SREDNIK
    (18) komenda -> . WRITE wartosc SREDNIK
    (47) identyfikator -> . IDENTYFIKATOR
    (48) identyfikator -> . identyfikatorTablicy
    (20) wywolanieProcedury -> . IDENTYFIKATOR LEWYNAWIAS argumenty PRAWYNAWIAS
    (49) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 25
    REPEAT          shift and go to state 26
    READ            shift and go to state 28
    WRITE           shift and go to state 29
    IDENTYFIKATOR   shift and go to state 24

    komendy                        shift and go to state 53
    komenda                        shift and go to state 20
    identyfikator                  shift and go to state 21
    wywolanieProcedury             shift and go to state 27
    identyfikatorTablicy           shift and go to state 30

state 27

    (16) komenda -> wywolanieProcedury . SREDNIK

    SREDNIK         shift and go to state 54


state 28

    (17) komenda -> READ . identyfikator SREDNIK
    (47) identyfikator -> . IDENTYFIKATOR
    (48) identyfikator -> . identyfikatorTablicy
    (49) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    IDENTYFIKATOR   shift and go to state 48

    identyfikator                  shift and go to state 55
    identyfikatorTablicy           shift and go to state 30

state 29

    (18) komenda -> WRITE . wartosc SREDNIK
    (43) wartosc -> . liczba
    (44) wartosc -> . identyfikator
    (45) liczba -> . LICZBA
    (46) liczba -> . MINUS LICZBA
    (47) identyfikator -> . IDENTYFIKATOR
    (48) identyfikator -> . identyfikatorTablicy
    (49) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    LICZBA          shift and go to state 46
    MINUS           shift and go to state 47
    IDENTYFIKATOR   shift and go to state 48

    wartosc                        shift and go to state 56
    liczba                         shift and go to state 44
    identyfikator                  shift and go to state 45
    identyfikatorTablicy           shift and go to state 30

state 30

    (48) identyfikator -> identyfikatorTablicy .

    PRZYPISANIE     reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    CZYMNIEJSZEROWNE reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    CZYWIEKSZEROWNE reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    CZYMNIEJSZE     reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    CZYWIEKSZE      reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    CZYROZNE        reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    CZYROWNE        reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    SREDNIK         reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    MINUS           reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    PLUS            reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    MODULO          reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    DZIELENIE       reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    MNOZENIE        reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    THEN            reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    DO              reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    DOWNTO          reduce using rule 48 (identyfikator -> identyfikatorTablicy .)
    TO              reduce using rule 48 (identyfikator -> identyfikatorTablicy .)


state 31

    (6) main -> MAIN IS deklaracje BEGIN . komendy END
    (7) komendy -> . komenda
    (8) komendy -> . komendy komenda
    (9) komenda -> . identyfikator PRZYPISANIE wyrazenie SREDNIK
    (10) komenda -> . IF warunek THEN komendy ENDIF
    (11) komenda -> . IF warunek THEN komendy ELSE komendy ENDIF
    (12) komenda -> . FOR IDENTYFIKATOR FROM wartosc DOWNTO wartosc DO komendy ENDFOR
    (13) komenda -> . FOR IDENTYFIKATOR FROM wartosc TO wartosc DO komendy ENDFOR
    (14) komenda -> . WHILE warunek DO komendy ENDWHILE
    (15) komenda -> . REPEAT komendy UNTIL warunek SREDNIK
    (16) komenda -> . wywolanieProcedury SREDNIK
    (17) komenda -> . READ identyfikator SREDNIK
    (18) komenda -> . WRITE wartosc SREDNIK
    (47) identyfikator -> . IDENTYFIKATOR
    (48) identyfikator -> . identyfikatorTablicy
    (20) wywolanieProcedury -> . IDENTYFIKATOR LEWYNAWIAS argumenty PRAWYNAWIAS
    (49) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 25
    REPEAT          shift and go to state 26
    READ            shift and go to state 28
    WRITE           shift and go to state 29
    IDENTYFIKATOR   shift and go to state 24

    komendy                        shift and go to state 57
    komenda                        shift and go to state 20
    identyfikator                  shift and go to state 21
    wywolanieProcedury             shift and go to state 27
    identyfikatorTablicy           shift and go to state 30

state 32

    (23) deklaracje -> deklaracje PRZECINEK . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
    (24) deklaracje -> deklaracje PRZECINEK . IDENTYFIKATOR

    IDENTYFIKATOR   shift and go to state 58


state 33

    (21) deklaracje -> IDENTYFIKATOR LEWYNAWIASKWADRATOWY . liczba DWUKROPEK liczba PRAWYNAWIASKWADRATOWY
    (45) liczba -> . LICZBA
    (46) liczba -> . MINUS LICZBA

    LICZBA          shift and go to state 46
    MINUS           shift and go to state 47

    liczba                         shift and go to state 59

state 34

    (3) procedury -> procedury PROCEDURA naglowekProcedury IS BEGIN komendy . END
    (8) komendy -> komendy . komenda
    (9) komenda -> . identyfikator PRZYPISANIE wyrazenie SREDNIK
    (10) komenda -> . IF warunek THEN komendy ENDIF
    (11) komenda -> . IF warunek THEN komendy ELSE komendy ENDIF
    (12) komenda -> . FOR IDENTYFIKATOR FROM wartosc DOWNTO wartosc DO komendy ENDFOR
    (13) komenda -> . FOR IDENTYFIKATOR FROM wartosc TO wartosc DO komendy ENDFOR
    (14) komenda -> . WHILE warunek DO komendy ENDWHILE
    (15) komenda -> . REPEAT komendy UNTIL warunek SREDNIK
    (16) komenda -> . wywolanieProcedury SREDNIK
    (17) komenda -> . READ identyfikator SREDNIK
    (18) komenda -> . WRITE wartosc SREDNIK
    (47) identyfikator -> . IDENTYFIKATOR
    (48) identyfikator -> . identyfikatorTablicy
    (20) wywolanieProcedury -> . IDENTYFIKATOR LEWYNAWIAS argumenty PRAWYNAWIAS
    (49) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY IDENTYFIKATOR PRAWYNAWIASKWADRATOWY
    (50) identyfikatorTablicy -> . IDENTYFIKATOR LEWYNAWIASKWADRATOWY liczba PRAWYNAWIASKWADRATOWY

    END             shift and go to state 60
    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 25
    REPEAT          shift and go to state 26
    READ            shift and go to state 28
    WRITE           shift and go to state 29
    IDENTYFIKATOR   shift and go to state 24

    komenda                        shift and go to state 40
    identyfikator                  shift and go to state 21
    wywolanieProcedury             shift and go to state 27
    identyfikatorTablicy           shift and go to state 30

state 35
